Handling styling of offscreen and setting lang country correct for multilang site

--- a/assets/scss/vars.supportersplace.scss
+++ b/assets/scss/vars.supportersplace.scss
@@ -4,8 +4,8 @@ $global-font-family: "Lato", sans-serif;
 
 $global-background: #fff;
 $global-muted-background: #f2f4f5;
-$global-primary-background: #54575a;
-$global-secondary-background: #fa6900;
+$global-primary-background: #016080;
+$global-secondary-background: #54575a;
 
 $global-slider-background: #fce0cc;
 $global-slider-color: #002a32;
